# telemetry-vis-software

./: .gitignore  .gitmodules  Caddyfile  README.md  clickhouse-config.xml  clickhouse-users.xml  compose.bvngeedotcom.yaml  compose.yaml  copyparty.conf  package-lock.json  package.json  setup-hooks.ps1  setup-hooks.sh
.githooks/: pre-commit  pre-commit.ps1
.github/workflows/: build-push-docker-images.yml
app/: dataframe.ts  datatypes.ts  layout.tsx  message.ts  page.tsx  schema.ts  websocket.ts
app/PerfTests/: typedVsRegularArrays.ts
app/components/: ModalContainer.tsx  SubsystemPicker.tsx  TestChart.tsx
backend/: Dockerfile  README.md  pyproject.toml  recv.py  requirements.txt  send.py  t.arrows
backend/examples/: async_ipc_message_reader.py  ws_recv.py  ws_send.py
backend/src/: http_server.py  main.py  sim.py  websocket_radio.py  websocket_server.py
backend/src/util/: dbc_to_json.py
clickhouse_config/users.d/: users.xml
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/app/: FlexLayoutProvider.tsx  datatypes.ts  flexlayout-dark-rounded.css  globals.css  http.ts  layout.tsx  page.tsx  page_old.tsx  websocket.ts
frontend/constants/: layouts.ts
frontend/models/: Components.tsx  (+2 more)
fs-config/: config2.json
layouts/: config.json  config3.json  layout.json  layout2.json  layout3.json
python/: Dockerfile  main.py  requirements.txt  sim.py  websocket_server.py
python-test/: Dockerfile  http_server.py  main.py  python-test.Dockerfile  requirements.txt  sim.py
(+65 files in other folders)
